--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,9 @@
     <mysql.version>5.1.32</mysql.version>
     <slf4j.version>1.7.7</slf4j.version>
     <logback.version>1.1.7</logback.version>
-    <jackson.version>2.4.2</jackson.version>
+    <!--<jackson-databind.version>2.8.8</jackson-databind.version>-->
+    <!--<jackson-annotations.version>2.8.0</jackson-annotations.version>-->
+    <jackson-mapper-asl.version>1.9.13</jackson-mapper-asl.version>
     <druid.version>1.0.9</druid.version>
     <jstl.version>1.2</jstl.version>
     <servlet-api.version>2.5</servlet-api.version>
@@ -124,7 +126,7 @@
     <pagehelper.version>3.4.2</pagehelper.version>
     <jsqlparser.version>0.9.1</jsqlparser.version>
     <commons-fileupload.version>1.3.1</commons-fileupload.version>
-    <json.version>20180813</json.version>
+    <json.version>2.4</json.version>
     <mail.version>1.4.7</mail.version>
     <activation.version>1.1</activation.version>
     <commons-email.version>1.3.3</commons-email.version>
@@ -135,11 +137,12 @@
   <dependencies>
     <!--json-->
     <dependency>
-      <groupId>org.json</groupId>
-      <artifactId>json</artifactId>
+      <groupId>net.sf.json-lib</groupId>
+      <artifactId>json-lib</artifactId>
       <version>${json.version}</version>
+      <classifier>jdk15</classifier>
+      <!--这个依赖必须要写jdk15版本的-->
     </dependency>
-
     <!--邮箱-->
     <dependency>
       <groupId>javax.mail</groupId>
@@ -191,11 +194,11 @@
       <version>${commons-net.version}</version>
     </dependency>
     <!-- Jackson Json处理工具包 -->
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
-      <version>${jackson.version}</version>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.codehaus.jackson</groupId>-->
+      <!--<artifactId>jackson-mapper-asl</artifactId>-->
+      <!--<version>${jackson-mapper-asl.version}</version>-->
+    <!--</dependency>-->
     <!-- 单元测试 -->
     <dependency>
       <groupId>junit</groupId>
