--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -57,6 +57,10 @@
         <servlet-name>wdkj</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/WEB-INF/jsp/404Error.jsp</location>
+    </error-page>
     <!--设置session无操作5分钟后销毁-->
     <!-- <session-config>
          <session-timeout>5</session-timeout>
