--- a/src/main/resources/properties/srcPath.properties
+++ b/src/main/resources/properties/srcPath.properties
@@ -1,10 +1,10 @@
 #本地path路径
-src.bigImg=D:\\showImg\\BigImg\\
-src.smallImg=D:\\showImg\\SmallImg\\
-src.resImg=D:\\showImg\\SrcImg\\
-src.annImg=D:\\showImg\\AnnImg\\
-#服务器path路径
 #src.bigImg=D:\\showImg\\BigImg\\
 #src.smallImg=D:\\showImg\\SmallImg\\
 #src.resImg=D:\\showImg\\SrcImg\\
 #src.annImg=D:\\showImg\\AnnImg\\
+#服务器path路径
+src.bigImg=/home/xyImg/bigImg/
+src.smallImg=/home/xyImg/smallImg/
+src.resImg=/home/xyImg/resImg/
+src.annImg=/home/xyImg/annImg/
